Multimedia player: Fixed video cut off/overflow issues.
In Firefox/Blink browsers, the multimedia player's CSS was previously causing the bottom of every video to be cut off by 1px. It also caused video placeholder images to overflow on top of figcaptions when printing (which made the top borders of some of #7815's figcaptions disappear).

--- a/src/plugins/multimedia/_base.scss
+++ b/src/plugins/multimedia/_base.scss
@@ -61,7 +61,7 @@ $mm-volume-thumb-width: 10px;
 }
 
 %controls-offset {
-	margin-bottom: -7px;
+	display: block;
 	width: 100%;
 }
 
